# mention-map

./: .gitignore  README.md
backend/: pyproject.toml
backend/api/: main.py  schemas.py
backend/nlp/: coreference.py  disambiguation.py  mentions.py  ner.py  pipeline.py
backend/scripts/: build_annotations.py  build_hf_dataset.py  build_hf_from_dump.py  enrich_genres.py  enrich_works.py  export_viewer_data.py  extract_corpus.py  import_libru.py  import_pushdom.py  merge_chapters.py  restore_enrichments.py  serve_viewer.py  update_hf_dataset.sh  verify_remaining.py
backend/sources/: corpus.py  wikisource.py
backend/tests/: test_api.py  test_timeline.py  test_wikisource.py
backend/timeline/: extractor.py
examples/: README.md
frontend/: index.html  package.json  viewer.html
frontend/src/components/: App.tsx
frontend/src/graph/: MentionGraph.tsx
frontend/src/upload/: TextUpload.tsx
frontend/src/utils/: types.ts
