[project]
name = "mention-map-backend"
version = "0.1.0"
description = "NLP backend for Mention Map — character mention graph extraction"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "spacy>=3.8",
    "pydantic>=2.0",
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.28",
    "ruff>=0.9",
]
stanza = [
    "stanza>=1.9",
]

[tool.pytest.ini_options]
markers = [
    "network: tests that require internet access (deselect with '-m not network')",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
